# Ahl-Communication

./: README.md
01- ahla code/: Ahla_400_Features_All.csv  Ahla_400_Features_Executive_Matrix.xlsx
01- ahla code/ahla-suite-v3_5/: .env.example  README.md  docker-compose.dev.yml
01- ahla code/ahla_aif_v1_1_1_patch/: README_PATCH.md
01- ahla code/ahla_app_charts_v1/: Dockerfile.ahla-chat-api  Dockerfile.ahla-drive-api  Dockerfile.ahla-meet-signaling  Dockerfile.ahla-web-app  README.md
01- ahla code/ahla_argo_apps_v1/: README.md
01- ahla code/ahla_aws_blocks_v1_1/: README.md
01- ahla code/ahla_aws_golive_v1/: README.md
01- ahla code/ahla_chat_expo_instant/: App.js  README.md  app.json  package.json
01- ahla code/ahla_chat_expo_live/: App.js  README.md  app.json  config.json  package.json
01- ahla code/ahla_chat_personal_v1_20251109_203431/: README.md
01- ahla code/ahla_chat_personal_v2_full_20251109_204227/: README.md
01- ahla code/ahla_chat_v3_1_all_20251109_205155/: README.md
01- ahla code/ahla_chat_v3_2_fullstack_20251109_210006/: README.md
01- ahla code/ahla_chat_v3_emotion_video_20251109_204858/: README.md
01- ahla code/ahla_cloud_v1_golive_pack/: README_CLOUD_V1.md
01- ahla code/ahla_core_phaseA/: README.md
01- ahla code/ahla_mobile_phaseC/core/ahla-core/: Cargo.toml  cbindgen.toml
01- ahla code/ahla_mobile_phaseC/core/ahla-core/src/: lib.rs
01- ahla code/ahla_v3_6_secure_meet_obs_waf/ahla-meet/mls/: Cargo.toml  README.md
01- ahla code/ahla_v3_6_secure_meet_obs_waf/ahla-meet/mls/src/: main.rs
(+1586 files in other folders)
