[package]
name = "ahla-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "ahla_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
jni = "0.21"
once_cell = "1.19"
parking_lot = "0.12"
base64 = "0.22"
rand_core = "0.6"
x25519-dalek = "2"
chacha20poly1305 = { version = "0.10", features=["std"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tokio = { version = "1", features=["rt-multi-thread","macros"] }
async-nats = "0.33"
futures-util = "0.3"

[features]
# placeholder to switch to sqlcipher later
sqlcipher = []

