[package]
name = "ahla-mls"
version = "0.1.0"
edition = "2021"

[dependencies]
# openmls = "0.10" # Uncomment and pin to a compatible version
# openmls_basic_credential = "0.10"
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
